--- a/Thursday.Rmd
+++ b/Thursday.Rmd
@@ -15,3 +15,4 @@ www.starlogs.net
 - Start using `testthat` for package management
 - Have a look at the praise tha package
 - When starting any project, first start the repo on github and then use this with the project set up 
+- ALWAYS pull before starting your work again
