--- a/VineVizR.Rmd
+++ b/VineVizR.Rmd
@@ -12,7 +12,26 @@ runtime: shiny
 # load data in 'global' chunk so it can be shared by all users of the dashboard
 library(datasets)
 data(iris)
+
+for(i in list.files("R/", full.names = T)) source(i)
+
+# Download Top40 on JSE
+load_pkg(c(
+  "dplyr", 
+  "tidyr",
+  "tibble",
+  "ggplot2",
+  "quantmod",
+  "PerformanceAnalytics",
+  "rugarch",
+  "VineCopula",
+  "visNetwork"
+))
+
+
 ```
+
+
 
 
 Column {.sidebar}
@@ -30,41 +49,25 @@ numericInput('clusters', 'Cluster count', 3,
 
 Column
 -----------------------------------------------------------------------
-
-### K Means
-
-```{r}
-palette(c("#E41A1C", "#377EB8", "#4DAF4A", "#984EA3",
-  "#FF7F00", "#FFFF33", "#A65628", "#F781BF", "#999999"))
-
-# Combine the selected variables into a new data frame
-selectedData <- reactive({
-  iris[, c(input$xcol, input$ycol)]
-})
-
-clusters <- reactive({
-  kmeans(selectedData(), input$clusters)
-})
-
-renderPlot({
-  par(mar = c(5.1, 4.1, 0, 1))
-  plot(selectedData(),
-       col = clusters()$cluster,
-       pch = 20, cex = 3)
-  points(clusters()$centers, pch = 4, cex = 4, lwd = 4)
-})
-```
-
-Column
------------------------------------------------------------------------
 ```{r}
 require(visNetwork, quietly = TRUE)
 # minimal example
 
+
+colour_try <- colorspace::rainbow_hcl(23)
+
+#pie(rep(1,12), col=colours) 
+
 renderVisNetwork({
-  nodes <- data.frame(id = 1:input$clusters)
-  edges <- data.frame(from = c(1, 2), to = c(1, 3))
-  visNetwork(nodes, edges, width = "100%")
+  RVM <- readRDS("data/RVM.rds")
+
+  VisVineR(
+    RVM,
+    group = c("Fin", "Retail", "IT"),
+    group.size = c(12, 9, 2),
+    seed = 5, 
+    colours = colour_try
+    )
   })
 
 ```
